# game-jam

./: CMakeLists.txt
src/: main.cpp
src/include/: button.cpp  clothes_selector.cpp  dressing_scene.cpp  ending_scene.cpp  helpers.cpp  helpers.h  object.h  opening_scene.cpp  phone.cpp  scene.h
